clusters/nibbler/infra/flux/httproute-web-ui.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-web-ui
  namespace: flux-system
spec:
  hostnames:
    - flux.envoy.nibbler.dahaegga.com
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - backendRefs:
        - group: ""
          name: flux-operator
          kind: Service
          port: 9080
      matches:
        - path:
            type: PathPrefix
            value: /
