clusters/nibbler/infra/flux/securitypolicy-web-ui.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  # See https://gateway.envoyproxy.io/docs/tasks/security/basic-auth/
  name: basic-auth-flux-operator-web-ui
  namespace: flux-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: flux-operator-web-ui
  basicAuth:
    users:
      name: web-ui-basic-auth
